--- a/css/hc.css
+++ b/css/hc.css
@@ -469,7 +469,7 @@ time
   -webkit-box-shadow:inset 0 -10px 5px -2px rgba(119,119,119,0.35);
   border-bottom:solid 1px #fff;
   background-image: url('../images/phdComics.png');
-  background-size: cover;
+  background-size: contain;
   z-index:-4;
   margin-top:-55px;
   margin-bottom:30px;
@@ -481,7 +481,7 @@ time
   font-size:3em;
   font-family:"Helvetica Neue", helvetica, "Open Sans", sans-serif;
   font-weight:bolder;
-  color:#fff;
+  color: #2d1e18;
   text-align:center;
   padding-top:20px
 }
