--- a/_includes/greeting.html
+++ b/_includes/greeting.html
@@ -1,8 +1,8 @@
   </div>
   <div class="container">
     <div id="welcome-greeting">
-      <h1>Land Ahoy!</h1>
-      <h2>This is <a href="https://github.com/arnp/herring-cove">Herring Cove</a>, a minimal theme built for <a href="http://jekyllrb.com"> Jekyll</a>. It features a number distinctive features such as a fixed sidebar and a showcase image. It's also easily configurable and editable to your liking. <br><br> On this test site, you will find some blog posts, interesting links, and more. You'll also find a number of ways to get in touch.</h2>
+      <h1>Welcome!</h1>
+      <h2>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a></h2>
       <hr />
     </div>
   </div>
