--- a/_includes/greeting.html
+++ b/_includes/greeting.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div id="welcome-greeting">
       <h1>Welcome!</h1>
-      <h2>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a></h2>
+      <h2>My name is Qing Ping, a fifth-year Ph.D. student in Information Science from Drexel University. My research interests include video shot representation with time-sync comments, visual storytelling and scientific statement representation. Before joining Drexel, I completed my master degree at Dalian University of Technology, and my bachelor degree at Dalian University of Technology. <br><br> You can find my resume  <a href="https://www.dropbox.com/s/5eou8bs00l62k5x/QING%20PING%202017-1.pdf?dl=0">here</a>.</h2>
       <hr />
     </div>
   </div>
