--- a/css/hc.css
+++ b/css/hc.css
@@ -29,12 +29,12 @@ h2,h3
 
 h1 a,h2 a,h3 a,h4 a
 {
-  color:#428fe0
+  color: #2d1e18;
 }
 
 h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover
 {
-  color:#29598c
+  color: #2d1e18;
 }
 
 p
