--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,8 +12,8 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
       <li><a href="{{ site.baseurl }}/about.html">About</a></li>
-      <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-      <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
+      <li><a href="{{ site.baseurl }}/links.html">Background</a></li>
+      <li><a href="{{ site.baseurl }}/list.html">Publication</a></li>
       <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
 
       </ul>
@@ -27,8 +27,8 @@
     <li class="sidebar-brand"><a href="{{ site.baseurl }}/"><h1 class="brand">{{ site.name }}</h1></a><h3>{{ site.description }}</h3></li>
     <hr />
     <li><a href="{{ site.baseurl }}/about.html">About</a></li>
-    <li><a href="{{ site.baseurl }}/list.html">List</a></li>
-    <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
+    <li><a href="{{ site.baseurl }}/links.html">Background</a></li>
+    <li><a href="{{ site.baseurl }}/list.html">Publication</a></li>
     <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
 
     <hr />
