--- a/css/hc.css
+++ b/css/hc.css
@@ -253,7 +253,7 @@ pre
 .showcase-wrapper
 {
   width:100%;
-  height:34vh;
+  height:25%;
   min-height:500px;
   margin-top:-50px;
   box-shadow:inset 0 -10px 5px -2px rgba(119,119,119,0.35);
