--- a/css/hc.css
+++ b/css/hc.css
@@ -13,7 +13,7 @@ body
 h1,h2,h3,h4,h5,h6
 {
   font-family:"Helvetica Neue", helvetica, "Open Sans", sans-serif;
-  color: #d90006
+  color: #2d1e18;
 }
 
 h1
@@ -688,7 +688,7 @@ time
 
 #article h1,#article h2,#article h3
 {
-  color:#3a3a3a
+  color: #000000;
 }
 
 @media (max-width:767px) {
